--- a/index.html
+++ b/index.html
@@ -82,7 +82,36 @@
     </section>
 
     <section class="section-3-mission-values">
-
+        <section class="missionSection">
+        <div class="container">
+            <div class="row">
+                <div class="missionImg col-md-6 col-sm-12"></div>
+                <div class="missionText col-md-6 col-sm-12">
+                    <h3> WHO WE ARE</h3>
+                    <h1>Our Mission & Values</h1>
+                    <p class="value1">
+                        We started OVERWOOD with one goal - to make safe, high-yield investments accessible to regular
+                        people.
+                    </p>
+                    <p class="value2">
+                        We want to give everyone an opportunity to grow their money regardless of the value of their
+                        principal amount.
+                    </p>
+                    <p class="value3">
+                        We want to do it with integrity and a deep commitment that our client will never lose a dime of
+                        their hard-earned money.
+                    </p>
+                    <div class="signSection">
+                        <p>
+                            <img src="./Images/signature[5225].png" alt="">
+                        </p>
+                        <h5>Dr. Tayo Oyedeji</h5>
+                        <p>Founder & CEO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </section>
 
     <section class="section-4-six-things">
